--- a/cmsiti.html
+++ b/cmsiti.html
@@ -4,9 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style.css">
     <title>ITI CMS</title>
 </head>
+
 <body>
+    <header>
+        <nav>
+            <a class="active" href="#Home">Home</a>
+            <a href="./cmscontent.html">RoadMap</a>
+            <a href="./form.html">Registeration Form</a>
+            <a href="https://www.iti.gov.eg/iti/home">Contact</a>
+        </nav>
+    </header>
+
+
     <a href="./cmscontent.html"><img src="./indexPage.jpg" style="width:100%"></a>
 </body>
 </html>
